@@ -2,6 +2,7 @@
     * version 0.6.9
     * More configurable HTML button display options
     * Add keyboard shortcuts to HTML buttons
+    * Label current logged-in account in the account switcher
 
 2008-12-23:
     * version 0.6.8
